--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="article width25">
                 <h2 class="title">
-                 Pprofessor Amit kothari will be representing india in UN conference
+                 Professor Amit kothari will be representing india in UN conference
                 </h2>
                 <p class="content">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic ad in quas alias non! 
