--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="article width25">
                 <h2 class="title">
-                 Vaasnata Singh will pe flying X-23
+                 Vaasanta Singh will be flying X-23
                 </h2>
                 <p class="content">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta non voluptatibus
